# module-level-lint

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: cd.yml  ci.yml  release.yml
module_level_lint/: __init__.py  error.py  format.py  lint.py  utils.py
tests/: __init__.py  test_format.py  test_helper.py  test_lint.py  test_module_level_lint.py  test_utils.py
tests/fixtures/: mll002.py  mll003.py  mll005.py  mll006.py
tests/fixtures/format/: class.py  class_formatted.py  function.py  function_formatted.py  newline.py  newline_formatted.py  script.py  script_formatted.py
tests/fixtures/lint/: mll001.py  mll003.py  mll004.py
