[tool.poetry]
name = "module-level-lint"
version = "0.1.0"
description = ""
authors = ["Han Hwang Lim <hanhwanglim@gmail.com>"]
readme = "README.md"
packages = [{include = "module_level_lint"}]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"

[tool.poetry.plugins."flake8.extension"]
MLL = "module_level_lint:Plugin"

[tool.ruff]
exclude = [".tests/fixtures"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
