[tool.poetry]
name = "module-level-lint"
version = "0.1.1"
description = "A Flake8 plugin to checking module level docstrings, future-imports, and dunders as specified in PEP 8"
license = "MIT"
authors = ["Han Hwang Lim <hanhwanglim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hanhwanglim/module-level-lint"
packages = [{include = "module_level_lint"}]
keywords = ["flake8", "lint"]
classifiers = ["Framework :: Flake8"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.5.0"
mypy = "^1.6.1"
tox = "^4.11.3"


[tool.poetry.plugins."flake8.extension"]
MLL = "module_level_lint:Plugin"

[tool.ruff]
exclude = ["./tests/fixtures"]

[tool.mypy]
exclude = ['tests/fixtures']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
